--- a/main.html
+++ b/main.html
@@ -8,7 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <header>
+		<nav>
+			<ul>
+				<li><a href="https://www.w3schools.com/tags/tag_html.asp"></a></li>
+				<li><a href=https://www.w3schools.com/tags/tag_li.asp></a></li>
+				<li><a href="https://www.w3schools.com/tags/tag_nav.asp"></a></li>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<h1>3 random audios</h1>
+		<audio url="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		<audio url="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<audio url="URL 3: http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+	</section>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
