--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <header>
 		<nav>
 			<ul>
-				<li><a href="https://www.w3schools.com/tags/tag_html.asp"></a></li>
-				<li><a href=https://www.w3schools.com/tags/tag_li.asp></a></li>
-				<li><a href="https://www.w3schools.com/tags/tag_nav.asp"></a></li>
+				<li><a href="https://www.w3schools.com/tags/tag_html.asp">Home</a></li>
+				<li><a href=https://www.w3schools.com/tags/tag_li.asp>About</a></li>
+				<li><a href="https://www.w3schools.com/tags/tag_nav.asp">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
